--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -90,7 +90,7 @@ dir(system.file("extdata/sample_datasets/", package = "rcell2.examples"))
 
 ```{r}
 # Choose one set of example images:
-data.dir <- system.file("extdata/sample_datasets/time_series_sample/",
+data.dir <- system.file("extdata/sample_datasets/sample_images/",
                         package = "rcell2.examples")
 
 # List image files in the set:
@@ -313,7 +313,7 @@ Get paths to the images:
 metamorph_pics_dir <- "/path/to/your/data"
 
 # Or use the example images (requires "rcell2.examples", see first example above).
-metamorph_pics_dir <- system.file("extdata/sample_datasets/image_samples/",
+metamorph_pics_dir <- system.file("extdata/sample_datasets/time_series_example2/",
                                   package = "rcell2.examples")
 
 # List files
@@ -324,7 +324,9 @@ List plane info for an example image:
 
 ```{r}
 # Path to a sample image
-metamorph_pic <- paste0(metamorph_pics_dir, "/BF_Position07.tif")
+metamorph_pics <- rcell2.cellid::arguments(metamorph_pics_dir)
+metamorph_pics <- paste0(metamorph_pics$path, "/", metamorph_pics$image)
+metamorph_pic <- metamorph_pics[1]
 
 # Get the image plane metadata
 pic_plane_info <- rcell2.cellid::tiff_plane_info(path = metamorph_pic)
@@ -340,6 +342,9 @@ pic_plane_info %>%
   filter(grepl("stage-position", id))
 ```
 
+> Our motorized stage works in negative coordinate space, as most CNC machines do.
+> Take this into account when plotting.
+
 Get the metadata of all images:
 
 ```{r}
@@ -349,7 +354,7 @@ metamorph_pics <-
       full.names = T)
 
 plane_info_df <- setNames(metamorph_pics, basename(metamorph_pics)) %>% 
-  lapply(tiff_plane_info) %>% 
+  lapply(rcell2.cellid::tiff_plane_info) %>% 
   bind_rows(.id="image") %>% 
   mutate(variable = make.names(id)) %>% 
   filter(grepl("stage.position", variable)) %>% 
