--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -90,7 +90,7 @@ dir(system.file("extdata/sample_datasets/", package = "rcell2.examples"))
 
 ```{r}
 # Choose one set of example images:
-data.dir <- system.file("extdata/sample_datasets/sample_images/",
+data.dir <- system.file("extdata/sample_datasets/sample_time_series/",
                         package = "rcell2.examples")
 
 # List image files in the set:
@@ -115,7 +115,7 @@ Prepare image paths for CellID, with a default "file.pattern":
 
 ```{r}
 cellid.args <- 
-  rcell2.cellid::arguments(path = data.dir
+  rcell2.cellid::arguments(path = data.dir,
                            # file.pattern = "^(BF)_Position(\\d+)_time(\\d+).tif$", bf_as_fl = T,  # Settings for a "BF only" experiment.
                            # file.pattern = "^(BF|[A-Z]FP)_Position(\\d+)().tif$"  # Settings for a single frame experiment.
                            # parameters = parameters.txt  # Optional: include if defined previously.
@@ -313,7 +313,7 @@ Get paths to the images:
 metamorph_pics_dir <- "/path/to/your/data"
 
 # Or use the example images (requires "rcell2.examples", see first example above).
-metamorph_pics_dir <- system.file("extdata/sample_datasets/time_series_example2/",
+metamorph_pics_dir <- system.file("extdata/sample_datasets/sample_images/",
                                   package = "rcell2.examples")
 
 # List files
@@ -324,12 +324,18 @@ List plane info for an example image:
 
 ```{r}
 # Path to a sample image
-metamorph_pics <- rcell2.cellid::arguments(metamorph_pics_dir)
-metamorph_pics <- paste0(metamorph_pics$path, "/", metamorph_pics$image)
-metamorph_pic <- metamorph_pics[1]
+image_list <- rcell2.cellid::arguments(metamorph_pics_dir, 
+                                       file.pattern = "^(BF|[A-Z]FP)_Position(\\d+)().tif$")
+metamorph_pics <- paste0(image_list$path, "/", image_list$image)
+metamorph_pic <- metamorph_pics[2]
+```
 
+
+```{r}
 # Get the image plane metadata
 pic_plane_info <- rcell2.cellid::tiff_plane_info(path = metamorph_pic)
+
+pic_plane_info
 ```
 
 > If the required metadata is not found in the TIFF, a warning will be emitted.
@@ -338,8 +344,7 @@ pic_plane_info <- rcell2.cellid::tiff_plane_info(path = metamorph_pic)
 
 ```{r}
 # Show the stage-position properties
-pic_plane_info %>% 
-  filter(grepl("stage-position", id))
+subset(pic_plane_info, grepl("stage-position", id))
 ```
 
 > Our motorized stage works in negative coordinate space, as most CNC machines do.
@@ -348,17 +353,15 @@ pic_plane_info %>%
 Get the metadata of all images:
 
 ```{r}
-metamorph_pics <-
-  dir(path = metamorph_pics_dir, 
-      pattern = "BF.*\\d+.tif$",
-      full.names = T)
-
 plane_info_df <- setNames(metamorph_pics, basename(metamorph_pics)) %>% 
+  # Get metadata
   lapply(rcell2.cellid::tiff_plane_info) %>% 
   bind_rows(.id="image") %>% 
+  # Fix variable names and types
   mutate(variable = make.names(id)) %>% 
   filter(grepl("stage.position", variable)) %>% 
   mutate(value = as.numeric(value)) %>% 
+  # Make it wider
   pivot_wider(id_cols = "image", names_from = "variable", values_from = "value")
 
 plane_info_df
@@ -366,12 +369,12 @@ plane_info_df
 
 Plot XY stage positions:
 
+> This is specially useful when tracing a path for positions in a many-well time-course experiment.
+
 ```{r}
 ggplot(plane_info_df) +
   geom_point(aes(stage.position.x, stage.position.y))
 ```
-
-This is specially useful when tracing a path for positions in a many-well time-course experiment.
 
 #### Check position indexes
 
@@ -383,14 +386,7 @@ _but_ you could also use `dir` to get the files by pattern, and `sub` to get the
 independently of CellID.
 
 ```{r}
-cid.arguments <- 
-  rcell2.cellid::arguments(
-    path = metamorph_pics_dir, 
-    file.pattern = "^(BF|[A-Z]FP)_Position(\\d+)_time(\\d+).tif$", 
-    bf_as_fl = T
-    )
-
-images <- rcell2.cellid::arguments_to_images(arguments = cid.arguments)
+images <- rcell2.cellid::arguments_to_images(arguments = image_list)
 ```
 
 Add image metadata and replot the stage's "path":
@@ -401,10 +397,16 @@ plane_info_df %>%
   arrange(pos) %>% 
   ggplot(aes(stage.position.x, stage.position.y, label = pos)) +
   geom_path(aes(group = t.frame)) +
+  geom_rect(aes(xmin=stage.position.x-1000, 
+                xmax=stage.position.x+1000, 
+                ymin=stage.position.y-1000, 
+                ymax=stage.position.y+1000,
+                group = pos, fill = factor(pos)), alpha =.5)+
   geom_text(size=10) +
-  facet_grid(t.frame~channel) +
-  scale_x_reverse() +
-  ggtitle("Coordenadas del stage")
+  facet_grid(t.frame~channel) + guides(fill = "none") +
+  scale_x_reverse() + #coord_fixed()+
+  ggtitle("Physical stage coordinates v.s. Position index",
+          "Compare the index numbers with the expected physical distrubution in the well plate.\nThe shaded areas around index numbers shuould not overlap with each other.")
 ```
 
 ### Preview images
